--- a/src/login.css
+++ b/src/login.css
@@ -1,7 +1,7 @@
 .wrapper{
-    position: relative;
+    position: center;
     width: 400px;
-    height: 440px;
+    height: 520px;
     background: transparent;
     border: 2px solid rgba(255,255,255, .5);
     border-radius: 20px;
@@ -10,9 +10,141 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
+    transition: scale(0);
+    transition: height .5s ease;
+}
+
+.wrapper.active{
+    height: 440px;
 }
 
 .wrapper .form-box{
     width: 100%;
     padding: 40px;
+}
+
+
+.form-box p{
+    color: #000;
+    font-size: 18px;
+    padding-left: 40px;
+    padding-top: 50px;
+}
+
+.form-box label{
+    color: #000;
+    font-size: 20px;
+}
+
+.icon{
+    color: #000;
+}
+
+.btnlogin{
+    width: 130px;
+    height: 50px;
+    background: transparent;
+    border: 2px solid #000;
+    outline: none;
+    border-radius: 6px;
+    cursor: pointer;
+    font-size: 1.1em;
+    color: #000;
+    font-weight: 500;
+    margin-left: 40px;
+    transition: .5s;
+    font-size: large;
+}
+
+.btnlogin:hover{
+    background: rgba(0,0,0, .25);
+    color: #162938;
+}
+.btnlog{
+    padding-top: 25px;
+    padding-left: 50px;
+}
+.container{
+    padding-top: 300px;
+    padding-left: 615px;
+}
+
+.form-box h2{
+    font-size: 48px;
+    color: #000;
+    text-align: center;
+    padding-bottom: 15px;
+}
+
+.wrapper .form-box.login{
+    /*display: none;*/
+    position: absolute;
+    transform: translateX(0px);
+}
+.wrapper.active .form-box.login{
+    transition: none;
+    transform: translateX(0);
+}
+.wrapper .form-box.Register{
+    position: absolute;
+    transform: translateX(400px);
+}
+.wrapper.active .form-box.Register{
+    position: absolute;
+    transition: none;
+    transform: translateX(0);
+}
+
+.input-box{
+    position: relative;
+    width: 100%;
+    height: 50px;
+    border-bottom: 2px solid #162938;
+    margin: 30px 0;
+}
+
+.input-box label{
+    position: absolute;
+    top: 50%;
+    left: 5px;
+    transform: translateY(-50%);
+    font-size: 24px;
+    color: #162938;
+    font-weight: 500;
+    pointer-events: none;
+    transition: .5s;
+}
+
+.input-box input:focus~label,
+.input-box input:valid~label{
+    top: -3px;
+}
+
+.input-box input{
+    width:100%;
+    height: 100%;
+    background:transparent;
+    border: none;
+    outline: none;
+    font-weight: 600;
+}
+
+.input-box .icon{
+    position: absolute;
+    right: 8px;
+    font-size: .5em;
+    line-height: 57px;
+}
+
+.wrapper .icon-close{
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 45px;
+    height: 45px;
+    color: #000;
+    display: flex;
+    overflow: hidden;
+    cursor: pointer;
 }
