--- a/src/Product_Management.css
+++ b/src/Product_Management.css
@@ -1,3 +1,85 @@
+.popup-content{
+    width: 400px;
+    height: 650px;
+    background: transparent;
+    border: 2px solid rgba(255,255,255, .5);
+    border-radius: 20px;
+    backdrop-filter:blur(20px) ;
+    box-shadow: 0 0 30px rgba(0,0,0, .5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    transition: .5s;
+}
+  
+.popup {
+    position: fixed;
+    top: 50%;
+    left: 60%;
+    transform: translate(-50%, -50%);
+    z-index: 9999;
+    padding: 20px;
+}
+  
+.popup h3 {
+    font-size: .7em;
+    margin-left: 15%;
+    margin-bottom: 1rem;
+}
+  
+.popup .form-group {
+    margin-top: 5%;
+    margin-bottom: 1rem;
+}
+  
+.popup label {
+    display: block;
+    font-weight: bold;
+    margin-bottom: 0.5rem;
+    font-size: 27px;
+    color: black;
+}
+  
+.popup input[type="text"],
+.popup input[type="number"],
+.popup textarea {
+    display: block;
+    width: 100%;
+    padding: 0.5rem;
+    font-size: 1rem;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+    margin-top: 0.5rem;
+}
+  
+.popup button[type="submit"] {
+    display: block;
+    width: 100%;
+    padding: 0.5rem;
+    background-color: #1E90FF;
+    color: #fff;
+    font-size: 1rem;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+    margin-top: 1rem;
+}
+  
+.popup button[type="button"] {
+    display: block;
+    width: 100%;
+    padding: 0.5rem;
+    background-color: red;
+    color: #fff;
+    font-size: 1rem;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+    margin-top: 1rem;
+}
+
 table{
     width: 900px;
     height: 100px;
@@ -33,6 +115,7 @@ td{
     text-align: center;
     color: black;
     font-size: 25px;
+    overflow: hidden;
 }
 
 .contrainer{
