--- a/src/Home.css
+++ b/src/Home.css
@@ -1,10 +1,8 @@
 .container-home{
-    top:0;
-    width: 80%;
+    padding-top:120px;
+    width: 70%;
     margin: 0 auto;
-  }
-.card{
-    
+    overflow: auto;
 }
 
 h1 {
@@ -56,4 +54,22 @@ button {
 button:hover {
     background-color: #0056b3;
 }
+
+.card {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    grid-gap: 20px;
+    margin-top: 30px;
+}
   
+.card > div {
+    background-color: #fff;
+    border: 1px solid #ddd;
+    padding: 20px;
+    text-align: center;
+}
+  
+.card > div > img {
+    max-width: 100%;
+}
+    
