--- a/src/Home.css
+++ b/src/Home.css
@@ -1,45 +1,47 @@
-.container-home{
-    padding-top:2%;
+.container-home {
+    padding-top: .5%;
     width: 70%;
     margin: 0 auto;
     overflow: auto;
+    height: 100vh;
 }
 
+h5,
 h1 {
-    font-size: 2.5rem;
+    font-size: 2rem;
     text-align: center;
     margin-bottom: 2rem;
 }
-  
-.product {
-    display: fixed;
+
+.products {
+    display: auto;
     margin-bottom: 2rem;
     align-items: center;
 }
-  
-.product img {
+
+.products img {
     width: 200px;
     height: 200px;
     object-fit: cover;
     margin-right: 2rem;
 }
-  
-.product h5 {
-    font-size: 1.5rem;
+
+.products h5 {
+    font-size: 1rem;
     margin-bottom: 0.5rem;
 }
 
-.product p {
+.products p {
     font-size: 1.2rem;
     margin-bottom: 1rem;
     color: black;
 }
-  
-.product h6 {
+
+.products h6 {
     font-size: 1.5rem;
     margin-bottom: 1rem;
 }
-  
+
 button {
     border: none;
     padding: 0.5rem 1rem;
@@ -50,7 +52,7 @@ button {
     cursor: pointer;
     margin-top: 1rem;
 }
-  
+
 button:hover {
     background-color: #0056b3;
 }
@@ -61,15 +63,22 @@ button:hover {
     grid-gap: 20px;
     margin-top: 30px;
 }
-  
-.card > div {
+
+.card>div {
     background-color: #fff;
     border: 1px solid #ddd;
     padding: 20px;
     text-align: center;
 }
-  
-.card > div > img {
+
+.card>div>img {
     max-width: 100%;
 }
-    
+
+.text-empty {
+    padding-top: 25%;
+    color: black;
+    font-size: 35px;
+    padding-left: 40%;
+}
+
