--- a/src/Product_Management.css
+++ b/src/Product_Management.css
@@ -1,18 +1,18 @@
-.popup-content{
+.popup-content {
     width: 400px;
     height: 650px;
     background: transparent;
-    border: 2px solid rgba(255,255,255, .5);
+    border: 2px solid rgba(255, 255, 255, .5);
     border-radius: 20px;
-    backdrop-filter:blur(20px) ;
-    box-shadow: 0 0 30px rgba(0,0,0, .5);
+    backdrop-filter: blur(20px);
+    box-shadow: 0 0 30px rgba(0, 0, 0, .5);
     display: flex;
     justify-content: center;
     align-items: center;
     overflow: hidden;
     transition: .5s;
 }
-  
+
 .popup {
     position: fixed;
     top: 50%;
@@ -21,18 +21,18 @@
     z-index: 9999;
     padding: 20px;
 }
-  
+
 .popup h3 {
     font-size: .7em;
     margin-left: 15%;
     margin-bottom: 1rem;
 }
-  
+
 .popup .form-group {
     margin-top: 5%;
     margin-bottom: 1rem;
 }
-  
+
 .popup label {
     display: block;
     font-weight: bold;
@@ -40,7 +40,7 @@
     font-size: 27px;
     color: black;
 }
-  
+
 .popup input[type="text"],
 .popup input[type="number"],
 .popup textarea {
@@ -53,7 +53,7 @@
     box-sizing: border-box;
     margin-top: 0.5rem;
 }
-  
+
 .popup button[type="submit"] {
     display: block;
     width: 100%;
@@ -66,7 +66,7 @@
     cursor: pointer;
     margin-top: 1rem;
 }
-  
+
 .popup button[type="button"] {
     display: block;
     width: 100%;
@@ -80,12 +80,12 @@
     margin-top: 1rem;
 }
 
-table{
+.table-manage {
     width: 900px;
-    height: 100px;
+    height: 1200px;
 }
 
-.btnadd{
+.btnadd {
     padding: 10px;
     background-color: orange;
     border: 2px solid #fff;
@@ -95,40 +95,46 @@ table{
     font-size: 1.1em;
     color: #fff;
     font-weight: 500;
-    margin-left: 40px;
     transition: .5s;
     font-size: large;
-    margin-left: 100%;
-}    
-
-.btnadd:hover{
-    background: rgba(0,0,0, .25);
+    margin-left: 170%;
 }
 
-th{
+.btnadd:hover {
+    background: rgba(0, 0, 0, .25);
+}
+
+th {
     border-bottom: 1px solid black;
     font-size: 25px;
     color: black;
 }
-    
-td{
+
+td {
     text-align: center;
     color: black;
     font-size: 25px;
-    overflow: hidden;
-}
-
-.contrainer{
-    position: relative;
-    padding-left: 375px;
     overflow: auto;
 }
 
-h1, h2, h3, h4, h5, h6 {
+.contrainer-manage {
+    padding-left: 40%;
+}
+
+.contrainer-over{
+    width: 900px;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     color: black;
 }
 
-.btndel{
+.btndel {
     padding: 10px;
     background-color: Red;
     border: 2px solid #fff;
@@ -141,13 +147,13 @@ h1, h2, h3, h4, h5, h6 {
     margin-left: 5px;
     transition: .5s;
     font-size: large;
-}    
-
-.btndel:hover{
-    background: rgba(0,0,0, .25);
 }
 
-.btnedit{
+.btndel:hover {
+    background: rgba(0, 0, 0, .25);
+}
+
+.btnedit {
     padding: 10px;
     background-color: green;
     border: 2px solid #fff;
@@ -161,8 +167,8 @@ h1, h2, h3, h4, h5, h6 {
     transition: .5s;
     font-size: large;
     margin-left: 5%;
-}    
+}
 
-.btnedit:hover{
-    background: rgba(0,0,0, .25);
+.btnedit:hover {
+    background: rgba(0, 0, 0, .25);
 }
