--- a/src/index.css
+++ b/src/index.css
@@ -1,75 +1,84 @@
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-html, body{
-  position:fixed;
+html,
+body {
+  position: fixed;
   width: 200vh;
 }
-body{
+
+body {
   padding-top: 75px;
   font-family: Arial, Helvetica, sans-serif;
-  font-size:  45px;
+  font-size: 45px;
   color: #fff;
 }
 
-.main{
+.main {
   height: 100vh;
 }
-.sidebar{
+
+.sidebar {
   width: 20%;
   background-color: rgba(22, 22, 22, 1);
   height: auto;
-  overflow: auto;
 }
 
-.sidebar-data{
+.sidebar-data {
   padding: .75em 1em;
   display: block;
-  transition:.15s;
+  transition: .15s;
   border-radius: 5px;
 }
-.sidebar-data:hover{
+
+.sidebar-data:hover {
   background-color: rgba(255, 255, 255, .1);
 }
 
-.sidebar-title{
+.sidebar-title {
   display: flex;
   font-size: 22 px;
   justify-content: space-between;
 }
-.sidebar-title span i{
+
+.sidebar-title span i {
   display: inline-block;
   width: 1.5em;
 }
-.sidebar-content{
+
+.sidebar-content {
   padding-top: .25em;
   height: 0;
   overflow: hidden;
 }
-.sidebar-data.open > .sidebar-content{
+
+.sidebar-data.open>.sidebar-content {
   height: auto;
 }
 
-.sidebar-data.plain{
+.sidebar-data.plain {
   color: #fff;
   text-decoration: none;
 }
-.sidebar-data.plain:hover{
+
+.sidebar-data.plain:hover {
   text-decoration: underline;
 }
-.sidebar-data.plain i{
+
+.sidebar-data.plain i {
   display: inline-block;
   width: 1.7em;
 }
-img{
+
+img {
   display: flex;
   width: auto;
 }
 
-.h1{
+.h1 {
   color: black;
   padding-left: 190px;
   padding-top: 320px;
