--- a/src/Cart.css
+++ b/src/Cart.css
@@ -4,8 +4,9 @@
     padding-left: 15%;
 }
 
-.text {
-    padding-left: 38%;
+.text-empty {
+    padding-left: 35%;
+    padding-top: 20%;
 }
 
 .btn-increase {
@@ -17,8 +18,53 @@
 .btn-decrease {
     background-color: pink;
     padding: 3%;
+    margin: 0 5%;
 }
 
 .table-cart{
     width: 900px;
 }
+
+.text-cart{
+    padding-left: 35%;
+}
+.popup-payment {
+    position: fixed;
+    top: 50%;
+    left: 60%;
+    transform: translate(-50%, -50%);
+    z-index: 9999;
+    padding: 20px;
+}
+
+.popup-content-payment {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 500px;
+    height: 500px;
+    background: transparent;
+    border: 2px solid rgba(255, 255, 255, .5);
+    border-radius: 20px;
+    backdrop-filter: blur(20px);
+    box-shadow: 0 0 30px rgba(0, 0, 0, .5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    transition: .5s;
+}
+.popup-edit button[type="submit"] {
+    display: block;
+    width: 100%;
+    padding: 0.5rem;
+    background-color: #1E90FF;
+    color: #fff;
+    font-size: 1rem;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+    margin-top: 1rem;
+}
+
+  
