--- a/src/Home.css
+++ b/src/Home.css
@@ -10,7 +10,10 @@ h5,
 h1 {
     font-size: 2rem;
     text-align: center;
-    margin-bottom: 2rem;
+}
+
+h6{
+    font-size: 20px;
 }
 
 .products {
@@ -82,3 +85,14 @@ button:hover {
     padding-left: 40%;
 }
 
+img{
+    width: 100px;
+    height: 100px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+p{
+    color: black;
+    font-size: 20px;
+}
